# stylusport

./: .env.example  .gitignore  .vale.ini  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
cli/: Cargo.toml
cli/src/: chat.rs  llm.rs  main.rs
cli/src/chat/: session.rs  single_prompt.rs
cli/tapes/: chat-session.tape  chat-single-prompt.tape
docs/: 404.html  access-control.html  case-study-bonafida-token-vesting.html  errors-events.html  external-calls.html  fungible-tokens.html  gas-optimization.html  index.html  native-tokens.html  non-fungible-tokens.html  print.html  program-structure.html  searchindex.js  security-considerations.html  state-storage.html  testing-debugging.html  toc.html  toc.js
examples/case-studies/bonafida-token-vesting/: Cargo.toml
examples/case-studies/bonafida-token-vesting/src/: lib.rs
examples/concepts/access-control/stylus/: Cargo.toml
examples/concepts/access-control/stylus/src/: lib.rs
examples/concepts/accounts-to-storage/anchor/: Cargo.toml
examples/concepts/accounts-to-storage/anchor/src/: lib.rs
examples/concepts/accounts-to-storage/native/: Cargo.toml
examples/concepts/accounts-to-storage/native/src/: lib.rs
examples/concepts/accounts-to-storage/stylus/: Cargo.toml
examples/concepts/accounts-to-storage/stylus/src/: lib.rs
examples/concepts/cpi-to-external-call/anchor/: Cargo.toml
examples/concepts/cpi-to-external-call/anchor/src/: lib.rs
examples/concepts/cpi-to-external-call/native/: Cargo.toml
examples/concepts/cpi-to-external-call/native/src/: lib.rs
examples/concepts/cpi-to-external-call/solana-adder/: Cargo.toml
examples/concepts/cpi-to-external-call/solana-adder/src/: lib.rs
examples/concepts/cpi-to-external-call/stylus/: Cargo.toml
examples/concepts/cpi-to-external-call/stylus/src/: lib.rs
examples/concepts/erc20-allowances/stylus/: Cargo.toml
examples/concepts/erc20-allowances/stylus/src/: lib.rs  main.rs
examples/concepts/errors-events/stylus/: Cargo.toml
examples/concepts/errors-events/stylus/src/: lib.rs
examples/concepts/fungible-tokens/native/: Cargo.toml
examples/concepts/fungible-tokens/native/src/: lib.rs
examples/concepts/native-token-handling/anchor/: Cargo.toml
examples/concepts/native-token-handling/anchor/src/: lib.rs
examples/concepts/native-token-handling/stylus/: Cargo.toml
examples/concepts/native-token-handling/stylus/src/: lib.rs
examples/concepts/nested-mapping/stylus/: Cargo.toml
examples/concepts/nested-mapping/stylus/src/: lib.rs
examples/concepts/non-fungible-tokens/anchor/: Cargo.toml
examples/concepts/non-fungible-tokens/anchor/src/: lib.rs
examples/concepts/non-fungible-tokens/native/: Cargo.toml
examples/concepts/non-fungible-tokens/native/src/: lib.rs
examples/concepts/non-fungible-tokens/stylus/: Cargo.toml
examples/concepts/non-fungible-tokens/stylus/src/: lib.rs
examples/concepts/ownable/stylus/: Cargo.toml
examples/concepts/ownable/stylus/src/: lib.rs
examples/concepts/pdas-to-mappings/native/: Cargo.toml
examples/concepts/pdas-to-mappings/native/src/: lib.rs
examples/concepts/program-structure/anchor/: Cargo.toml
examples/concepts/program-structure/anchor/src/: lib.rs
examples/concepts/program-structure/native/: Cargo.toml
examples/concepts/program-structure/native/src/: lib.rs
examples/concepts/program-structure/stylus/: Cargo.toml
examples/concepts/program-structure/stylus/src/: lib.rs
examples/dev/gas-optimization/: Cargo.toml
examples/dev/gas-optimization/src/: lib.rs
handbook/: book.toml
handbook/src/: SUMMARY.md  access-control.md  advanced-features.md  case-study-bonafida-token-vesting.md  case-study-draffle.md  chapter_1.md  deployment-verification.md  errors-events.md  external-calls.md  fungible-tokens.md  gas-optimization.md  introduction.md  native-tokens.md  non-fungible-tokens.md  program-structure.md  quick-reference.md  resources-glossary.md  security-considerations.md  state-storage.md  testing-debugging.md  troubleshooting.md
mcp/: Cargo.toml  README.md
mcp/docs/: sample-plan-prompt-output-raydium-cp-swap.md
mcp/src/: handler.rs  main.rs  prompts.rs  resources.rs  server.rs  tools.rs
mcp/src/prompts/: plan_solana_program_stylus_migration.md
mcp/src/resources/: bm25.rs
research/: analyze-anchor-code-system-prompt.md  analyze-solana-code-system-prompt.md  anchor-repo-analysis-openai-o3-deep-research-prompt-1.md  anchor-repo-analysis-openai-o3-deep-research-report-1.md  anchor_repos.json  generate-analyze-anchor-code-system-prompt.md  generate-analyze-solana-code-system-prompt.md  solana-repo-analysis-openai-o3-deep-research-prompt-1.md  solana-repo-analysis-openai-o3-deep-research-report-1.md  solana-to-stylus-concept-map.md  solana_repos.json  stylus_repos.json
research/anchor-repo-analysis-claude-3.5-haiku-1/: 0-metaplex-foundation-metaplex-program-library.md  1-gemworks-gem-farm.md  10-justshiftjk-Pump.fun-Smart-Contract.md  11-txtx-txtx.md  12-MeteoraAg-damm-v1-sdk.md  13-solana-developers-professional-education.md  14-blockworks-foundation-mango-v4.md  15-draffle-io-draffle.md  16-jito-foundation-jito-programs.md  17-jito-foundation-stakenet.md  18-jito-foundation-distributor.md  20-Rabnail-SOL-Pump.fun-2022-Tax-Token-Smart-Contract.md  22-MeteoraAg-dynamic-bonding-curve.md  23-magicblock-labs-bolt.md  24-pyth-network-governance.md  25-cashioapp-cashio.md  26-vyper-protocol-vyper-core.md  27-cqfd-quidproquo.md  28-jarry-xiao-proof-of-work-faucet.md  29-drift-labs-drift-vaults.md  30-MeteoraAg-vault-sdk.md  31-metaplex-foundation-mpl-hybrid.md  33-AnotherRusty-Pump.fun-Smart-Contract-Fork-Meteora.md  34-ComposableFi-emulated-light-client.md  35-solace-labs-Solace-Wallet.md  36-orca-so-whirlpool-cpi.md  38-VK-RED-clobby.md  39-igneous-labs-sanctum-unstake-program.md  4-openbook-dex-openbook-v2.md  40-Near-One-omni-bridge.md  41-palindrome-eng-reflect-program-library.md  (+13 more)
scripts/: analyze_repos.py  anchor_repo_search.py  batch_download_repos.py  pyproject.toml  solana_repo_search.py  stylus_repo_search.py
scripts/lib/: github_search.py  repo_finder.py
(+59 files in other folders)
