[workspace]
members = [
  "cli", 
  "examples/concepts/*/*",
  "examples/case-studies/*"
]
exclude = ["examples/concepts/non-fungible-tokens/elf"]
resolver = "2"

[workspace.dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
arbitrary = "1.4.2"
borsh = "1.5.7"
borsh-derive = "1.5.7"
color-eyre = "0.6.5"
mollusk-svm = "0.4.1"
mollusk-svm-programs-token = "0.4.1"
motsu = "0.10.0"
mpl-token-metadata = "5.1.0"
openzeppelin-stylus = "=0.2.0"
solana-account = "2.2.1"
solana-program = "2.3.0"
solana-program-pack = "2.2.1"
solana-pubkey = "2.4.0"
solana-sdk-ids = "2.2.1"
solana-system-interface = "1.0.0"
spl-token-2022 = "9.0.0"
spl-associated-token-account = "7.0.0"
stylus-sdk = "0.9.0"
