[package]
name = "accounts-to-storage-solana-anchor"
version = "0.0.1"
publish = false
edition = "2021"

[lib]
doctest = false
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang.workspace = true

[dev-dependencies]
mollusk-svm.workspace = true
solana-account.workspace = true
solana-pubkey.workspace = true
solana-sdk-ids.workspace = true
