[package]
name = "errors-events-stylus"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
stylus-sdk.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = [ "tiny-keccak" ] }
stylus-sdk = { workspace = true, features = [ "stylus-test" ] }
