[package]
name = "fungible-tokens-solana-native"
version = "0.0.1"
publish = false
edition = "2021"

[lib]
doctest = false
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
solana-program.workspace = true
solana-program-pack.workspace = true
solana-sdk-ids.workspace = true
solana-system-interface.workspace = true
spl-token-2022 = { workspace = true, features = [ "no-entrypoint" ] }
spl-associated-token-account = { workspace = true, features = [ "no-entrypoint" ] }

[dev-dependencies]
mollusk-svm.workspace = true
mollusk-svm-programs-token.workspace = true
solana-account.workspace = true
solana-pubkey.workspace = true
