[package]
name = "native-token-handling-solana-anchor"
version = "0.0.1"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }

[dev-dependencies]
mollusk-svm.workspace = true
solana-account.workspace = true
solana-pubkey.workspace = true
solana-sdk-ids.workspace = true
solana-system-interface.workspace = true
