[package]
name = "nested-mapping-stylus"
version = "0.0.1"
publish = false
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true, features = [ "tiny-keccak" ] }
alloy-sol-types.workspace = true
stylus-sdk.workspace = true

[dev-dependencies]
stylus-sdk = { workspace = true, features = [ "stylus-test" ] }
