[package]
name = "program-structure-solana-native"
version = "0.0.1"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
solana-program.workspace = true
solana-system-interface.workspace = true

[dev-dependencies]
mollusk-svm.workspace = true
solana-account.workspace = true
solana-pubkey.workspace = true
solana-sdk-ids.workspace = true