[package]
name = "program-structure-stylus"
version = "0.0.1"
publish = false
edition = "2021"

[lib]
doctest = false

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
stylus-sdk.workspace = true

[dev-dependencies]
stylus-sdk = { workspace = true, features = [ "stylus-test" ] }
alloy-primitives = { workspace = true, features = [ "tiny-keccak" ] }
